fixed the width issue with an overflow:hidden in the less file

--- a/public/less/core.less
+++ b/public/less/core.less
@@ -24,6 +24,7 @@ a{
 
 #main{
 	height:inherit;
+	overflow: hidden;
 }
 
 #intro{
